/*
 * $Id: ChangeLog,v 1.5577 2007/05/28 07:48:25 marchuet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-05-28 18:05 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/rtl/pcre/config.h
    * Disable warning guarded by defined( __BORLANDC__ )

2007-05-28 09:48 UTC+0100 Miguel Angel Marchuet (miguelangel/at/marchuet.net)
  * include/hbrdddbf.h
  * include/hbrddntx.h
  * source/rdd/dbfntx/dbfntx1.c
    * moved static variables holding RDDI_* settings to RDDNODE data so
      they can be set separately for each RDD which inherits from DBFNTX
    synced with harbour

2007-05-27 18:18 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * source/rtl/tget.prg
    ! METHOD Reset() reverted to METHOD instead PROCEDURE

2007-05-27 11:25 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * bin\bld.bat
   * commented out line that removed any default libcmt.lib references from
   * included libs for msvc non-mt builds.
   * Suddenly, this is now a problem as MS Windows update is deleting
   * libc.lib from VC 8 builds!
   * We are now forced to use libcmt even though we may not be doing an MT
   * build.  (Which I suppose we should consider making the default...)

2007-05-27 18:13 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * make_xmingw.sh
  * source/pp/Makefile
    ! Fixed MinGW cross-compiler detection under Debian and its derivatives.
    ! Fixed ppgen operation when cross-compiling.

2007-05-27 17:42 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/tip/thtml.prg
    ! Fixed compilation in case-sensitive filesystems.

2007-05-27 17:36 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * include/Makefile
    ! Removed hbrddwrk.h.

2007-05-27 17:30 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/rtl/dateshb.c
    ! Fixed a couple of warnings.
