@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5577 2007/05/28 07:48:25 marchuet Exp $
+ * $Id: ChangeLog,v 1.5578 2007/05/28 16:11:03 enricomaria Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2007-05-28 19:10 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
+  * source/pp/ppcore.c
+    + Added HB_SYMBOL_UNUSED( pState ) to remove a compiler warning
+  * source/rtl/gtapi.c
+    + Added HB_SYMBOL_UNUSED( byAttr ) to remove a compiler warning
 
 2007-05-28 18:05 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
   * source/rtl/pcre/config.h
